# pySURF

./: .gitignore  KEYPOINTS_ANALYSIS.md  MANIFEST.in  Makefile  README.md  pyproject.toml
examples/: demo_surf.py  surf_demo.ipynb  tune_parameters.py
pysurf/: __init__.py  descriptor.py  filters.py  integral.py  keypoints.py  match.py  orientation.py  pysurf.py  scale_space.py  surf.py  viz.py
pysurf_detector.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_descriptor.py  test_filters.py  test_integral.py  test_integration.py  test_keypoints.py  test_match.py  test_orientation.py  test_scale_space.py  test_viz.py
